--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ javafx {
 }
 
 dependencies {
+    implementation 'mysql:mysql-connector-java:8.0.28'
     implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
         exclude(group: 'org.openjfx')
     }
@@ -62,3 +63,5 @@ jlink {
 jlinkZip {
     group = 'distribution'
 }
+
+
